# bearingslam

./: .gitignore  CMakeLists.txt  README.md
assets/: landmarks.txt
include/: Retta2d.h  drawer.h  graphics_stuff.h  tools.h
latex/: cap1.tex  cap2.tex  cap3.tex  cap4.tex  pseudo-code.tex  report_bearingslam.aux  report_bearingslam.tex  report_bearingslam.toc  sec3.1.tex  sec3.2.tex  sec3.3.tex
latex/images/: robot_stuff.xcf
maps/: esempio_a_1.txt  esempio_a_2.txt  esempio_b1.txt  esempio_b2.txt  esempio_c1.txt  esempio_c2.txt  esempio_d1.txt  esempio_d2.txt  esempio_d3.txt  map_2_mod.txt
matlab_simulator/: advanceRobot.m  applyNoiseData.m  circleHandles.m  circleHandlesMove.m  genLandmarks.m  homogDistance.m  homogZToValues.m  imposeVelocity.m  main.m  noiseOdometry.m  outOdometry  qdotSol.m  robLandmarks.m  valuesToHomog.m
matlab_simulator/prove/: provaKeys.m  provanormal.m
src/: FileReader.cpp  FileReader.h  LandmarksEstimator.cpp  Retta2d.cpp  drawer.cpp  graphics_stuff.cpp  graphics_stuff.h  mapsmerger.cpp  testRette.cpp  tools.cpp  trajgenerator.cpp
trajectories/: circle_noised.trj  circle_truth.trj  corridor2_noised.trj  corridor2_truth.trj  corridor3_noised.trj  corridor3_truth.trj  corridor_noised.trj  corridor_truth.trj
